--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               src="./img/ahora 12.jpg"
               class="d-block w-100"
               alt="ahora 12"
+              class="carruselPpalImg"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
@@ -61,7 +62,7 @@
           <div class="carousel-item">
             <img
               src="./img/carteles ofertas.jpg"
-              class="d-block w-100"
+              class="d-block w-100 carruselPpalImg"
               alt="carteles con descuentos"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -76,6 +77,7 @@
               src="./img/hot sale 2.png"
               class="d-block w-100"
               alt="hot sale"
+              class="carruselPpalImg"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
@@ -88,7 +90,7 @@
         <button
           class="carousel-control-prev"
           type="button"
-          data-bs-target="#carouselExampleCaptions"
+          data-bs-target="#carouselOfertas"
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -97,7 +99,7 @@
         <button
           class="carousel-control-next"
           type="button"
-          data-bs-target="#carouselExampleCaptions"
+          data-bs-target="#carouselOfertas"
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
