se trabaja con el movimiento del carrusel y acomodando imagenes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   <body>
     <header></header>
     <main>
-      <section id="carouselOfertas" class="carousel slide">
+      <section
+        id="carouselOfertas"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
         <div class="carousel-indicators">
           <button
             type="button"
@@ -47,10 +51,9 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./img/ahora 12.jpg"
-              class="d-block w-100"
+              src="./img/cripto/atencion.jpg"
+              class="d-block w-100 carruselPpalImg"
               alt="ahora 12"
-              class="carruselPpalImg"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
@@ -61,7 +64,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/carteles ofertas.jpg"
+              src="./img/cripto/inversion.jpg"
               class="d-block w-100 carruselPpalImg"
               alt="carteles con descuentos"
             />
@@ -74,10 +77,9 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/hot sale 2.png"
-              class="d-block w-100"
+              src="./img/cripto/dolar.jpg"
+              class="d-block w-100 carruselPpalImg"
               alt="hot sale"
-              class="carruselPpalImg"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
