--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner mt-5">
           <div class="carousel-item active">
             <img
-              src="./img/cripto/atencion.jpg"
+              src="./img/promociones2.jpg"
               class="d-block w-100 carruselPpalImg"
               alt="ahora 12"
             />
@@ -64,7 +64,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/cripto/inversion.jpg"
+              src="./img/promociones.jpg"
               class="d-block w-100 carruselPpalImg"
               alt="carteles con descuentos"
             />
@@ -77,7 +77,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/cripto/dolar.jpg"
+              src="./img/muchos electrodomesticos4.jpg"
               class="d-block w-100 carruselPpalImg"
               alt="hot sale"
             />
