--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img
               src="./img/promociones2.jpg"
               class="d-block w-100 carruselPpalImg"
-              alt="ahora 12"
+              alt="electrodomesticos en el aire"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
@@ -66,7 +66,7 @@
             <img
               src="./img/promociones.jpg"
               class="d-block w-100 carruselPpalImg"
-              alt="carteles con descuentos"
+              alt="camion con electrodomesticos"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
@@ -79,7 +79,7 @@
             <img
               src="./img/muchos electrodomesticos4.jpg"
               class="d-block w-100 carruselPpalImg"
-              alt="hot sale"
+              alt="teclado de computadora con electrodomesticos"
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
