--- a/index.html
+++ b/index.html
@@ -51,28 +51,34 @@
         <div class="carousel-inner mt-5">
           <div class="carousel-item active">
             <img
-              src="./img/promociones2.jpg"
+              src="./img/muchos electrodomesticos2.jpg"
               class="d-block w-100 carruselPpalImg"
-              alt="electrodomesticos en el aire"
+              alt="varios electrodomesticos"
             />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
+            <div class="carousel-caption d-none d-md-block titulosKarrusel">
+              <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
+                <h5 class="text-light titulosKarrusel display-4">
+                  <b>De todo para tu hogar</b>
+                </h5>
+                <p class="text-light display-5 mx-auto text-center">
+                  <b></b>
+                </p>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img
-              src="./img/promociones.jpg"
+              src="./img/muchos electrodomesticos.jpg"
               class="d-block w-100 carruselPpalImg"
-              alt="camion con electrodomesticos"
+              alt="electrodomesticos varios"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
+              <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
+                <h5 class="text-light titulosKarrusel display-4">
+                  <b>Linea Inoxidable</b>
+                </h5>
+              </div>
+              <p></p>
             </div>
           </div>
           <div class="carousel-item">
@@ -82,10 +88,14 @@
               alt="teclado de computadora con electrodomesticos"
             />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
+              <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
+                <h5 class="text-light titulosKarrusel display-4">
+                  <b>Comprá Online</b>
+                </h5>
+                <p>
+                  Some representative placeholder content for the third slide.
+                </p>
+              </div>
             </div>
           </div>
         </div>
