--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="description"
+      content="Proyecto para aplicar conceptos del modulo 1 del curso"
+    />
+    <meta name="author" content="Grupo 3" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,8 +18,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:opsz,wght,ital@8..72,300,1&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/style.css" />
-    <title></title>
+    <title>Electrocasa</title>
   </head>
   <body>
     <header></header>
@@ -92,9 +100,7 @@
                 <h5 class="text-light titulosKarrusel display-4">
                   <b>Comprá Online</b>
                 </h5>
-                <p>
-                  Some representative placeholder content for the third slide.
-                </p>
+                <p></p>
               </div>
             </div>
           </div>
