agrego comentarios y preparo para push

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
       <section
         id="carouselOfertas"
-        class="carousel slide"
+        class="carousel slide mt-5"
         data-bs-ride="carousel"
       >
         <div class="carousel-indicators">
@@ -56,7 +56,7 @@
             aria-label="Slide 3"
           ></button>
         </div>
-        <div class="carousel-inner mt-5">
+        <div class="carousel-inner">
           <div class="carousel-item active">
             <img
               src="./img/muchos electrodomesticos2.jpg"
@@ -83,7 +83,7 @@
             <div class="carousel-caption d-none d-md-block">
               <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
                 <h5 class="text-light titulosKarrusel display-4">
-                  <b>Linea Inoxidable</b>
+                  <b>Línea Inoxidable</b>
                 </h5>
               </div>
               <p></p>
