Agregado de mapa y texto con descrpciones

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <ul class="dropdown-menu" aria-labelledby="menudropdown">
                       <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Login</a></li>
                       <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Registrarse</a></li>
-                      <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Contacto</a></li>
+                      <li><a class="dropdown-item" href="./pages/contacto.html"><i class="bi bi-caret-right"></i> Contacto</a></li>
                     </ul>
                   </li>
                 </ul>
