Agregado de un cambio en formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -155,8 +155,8 @@
             </div>
             <div class="col-12">
               <p>
-                🏬 Sucursal Centro: 📍 Gral. José María Paz 576, 🕒 Lunes a Sábado
-                de 9:00 a 13:00 y de 17:00 a 21:00
+                🏬 Sucursal Centro: 📍 Gral. José María Paz 576, 🕒 Lunes a
+                Sábado de 9:00 a 13:00 y de 17:00 a 21:00
               </p>
               <p>
                 🏬 Sucursal Yerba Buena: 📍 Av. Aconquija 1450, 🕒 Lunes a
@@ -183,7 +183,7 @@
           </div>
         </div>
       </section>
-            <section class="row justify-content-center my-3">
+      <section class="row justify-content-center my-3">
         <div class="col-12 col-md-6 col-lg-6 my-3">
           <form class="border p-4 rounded shadow">
             <!-- Nombre -->
