se crea la seccion y los div para la grilla, se agrega una card con su boton de redireccionamiento

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <body>
     <header></header>
     <main>
+      <!-- carrusel -->
       <section
         id="carouselOfertas"
         class="carousel slide mt-5"
@@ -123,6 +124,30 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </section>
+      <!-- fin carrusel -->
+      <!-- Grilla -->
+      <section class="container mt-4">
+        <div class="row border">
+          <h2 class="text-center">Audio y TV</h2>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/electrodomesticos.webp"
+                class="card-img-top"
+                alt="electrodomestico"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
