agrego resto de las card a la grilla y acomodo margins

--- a/index.html
+++ b/index.html
@@ -127,15 +127,151 @@
       </section>
       <!-- fin carrusel -->
       <!-- Grilla -->
-      <section class="container mt-4">
+      <section class="container my-4">
         <div class="row border">
           <h2 class="text-center">Audio y TV</h2>
           <div class="col-12 col-md-4 col-lg-3">
             <div class="card">
               <img
-                src="./img/electrodomesticos.webp"
+                src="./img/AudioTv/televisor 52 pulg.webp"
                 class="card-img-top"
-                alt="electrodomestico"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card’s content.
+                </p>
+                <a href="#" class="btn btn-primary">Conocelo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-3">
+            <div class="card">
+              <img
+                src="./img/AudioTv/televisor 52 pulg.webp"
+                class="card-img-top"
+                alt="televisor 52 pulg"
               />
               <div class="card-body text-center">
                 <h5 class="card-title">Card title</h5>
