cambio foto de primer card, estilo del bg de boton y estilo letra

--- a/index.html
+++ b/index.html
@@ -128,29 +128,28 @@
       <!-- fin carrusel -->
       <!-- Grilla -->
       <section class="container my-4">
-        <div class="row border">
+        <div class="row border row-gap-3">
           <h2 class="text-center">Audio y TV</h2>
           <div class="col-12 col-md-4 col-lg-3">
             <div class="card">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
+                src="./img/AudioTv/monitor led gadnic 27 pulg.jpg"
                 class="card-img-top"
-                alt="televisor 52 pulg"
+                alt="televisor 27 pulg"
               />
               <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
+                <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
+                  Monitor LED Gadnic 27 pulgadas Alta Resolución
                 </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+                <a href="#" class="btn btn-primar colorEstiloGrilla">Visitar</a>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-4 col-lg-3">
             <div class="card">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
+                src="./img/AudioTv/parlante jbl.webp"
                 class="card-img-top"
                 alt="televisor 52 pulg"
               />
