termino de acomodar la card, fondo, redondeo bordes, ajusto background

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="row border row-gap-3">
           <h2 class="text-center">Audio y TV</h2>
           <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+            <div class="card colorFondoGrilla rounded-4">
               <img
                 src="./img/AudioTv/monitor led gadnic 27 pulg.jpg"
                 class="card-img-top"
@@ -142,7 +142,7 @@
                 <p class="card-text">
                   Monitor LED Gadnic 27 pulgadas Alta Resolución
                 </p>
-                <a href="#" class="btn btn-primar colorEstiloGrilla">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla">Visitar</a>
               </div>
             </div>
           </div>
