--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,16 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="34x34" href="./img/favicon1.png">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/png" sizes="34x34" href="../img/favicon1.png">
+    <link rel="stylesheet" href="../css/style.css">
     <title>ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-primary-subtle py-3">
             <div class="container-fluid ">
-              <a class="navbar-brand d-flex justify-content-end" href="./index.html">
-                <img src="./img/EH1.png" alt="icono" class="img-fluid me-2" style="width: 65px; height: 45px;">
+              <a class="navbar-brand d-flex justify-content-end" href="../index.html">
+                <img src="../img/EH1.png" alt="icono" class="img-fluid me-2" style="width: 65px; height: 45px;">
                 <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
               </a>
               <!--Carrito en dispositivos pequeños-->
@@ -37,7 +37,7 @@
                     <input class="form-control me-3" type="search" placeholder="Buscar productos..." aria-label="Buscar" />
                   </form>
                   <li class="nav-item">
-                    <a class="nav-link me-5 active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link me-5" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link me-5" href="#">Novedades</a>
@@ -47,7 +47,7 @@
                     <ul class="dropdown-menu" aria-labelledby="menudropdown">
                       <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Login</a></li>
                       <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Registrarse</a></li>
-                      <li><a class="dropdown-item" href="./pages/contacto.html"><i class="bi bi-caret-right"></i> Contacto</a></li>
+                      <li><a class="dropdown-item" href="../pages/contacto.html"><i class="bi bi-caret-right"></i> Contacto</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -63,113 +63,79 @@
         </nav>
     </header>
     <main>
-      <section
-        id="carouselOfertas"
-        class="carousel slide mt-5"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselOfertas"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselOfertas"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselOfertas"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
+      <section class="container">
+        <div class="bg-primary pb-4">
+           <div class="text-white text-center pt-4 pb-4 px-5">
+              <h2 class="logo fs-1 mb-3">ElectroHouse</h2>
+              <p class="fs-4">En ElectroHouse no solo vendemos electrodomésticos, ofrecemos soluciones para tu hogar. Creemos en la tecnología como una forma de hacer tu vida más cómoda práctica y eficiente. Nuestra misión es brindarte productos de calidad que se adapten a tu estilo de vida y mejoren tu día a día. Descubrí nuestras ofertas y convertí tu casa en un verdadero hogar conectado.</p>
+           </div>
+           <div class="container-fluid row d-flex justify-content-center gap-5">
+              <h3 class="text-white text-center">⚡Conocé al equipo detrás de ElectroHouse⚡</h3>
+              <div class="col-12 col-md-6 col-lg-3">
+                <div class="card border-black" style="width: 15rem; height: 100%;">
+                  <div style="height: 350px; overflow: hidden;">
+                    <img src="../img/nosotros/maxigomez.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center"><strong>Maximiliano Gómez Tolrá</strong></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3">
+                <div class="card border-black" style="width: 15rem; height: 100%;">
+                  <div style="height: 350px; overflow: hidden;">
+                    <img src="../img/nosotros/joselpadilla.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center"><strong>José Ledesma Padilla</strong></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3">
+                <div class="card border-black" style="width: 15rem; height: 100%;">
+                  <div style="height: 350px; overflow: hidden;">
+                    <img src="../img/nosotros/maxiordoñez.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center"><strong>Maximiliano Ordoñez</strong></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3">
+                <div class="card border-black" style="width: 15rem; height: 100%;">
+                  <div style="height: 350px; overflow: hidden;">
+                    <img src="../img/nosotros/soficisterna.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center"><strong>Sofia Cisterna</strong></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3">
+                <div class="card border-black" style="width: 15rem; height: 100%;">
+                  <div style="height: 350px; overflow: hidden;">
+                    <img src="../img/nosotros/joaquinbresla.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <p class="card-text text-center"><strong>Joaquín Albornoz Bresla</strong></p>
+                  </div>
+                </div>
+              </div>
+           </div>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="./img/muchos electrodomesticos2.jpg"
-              class="d-block w-100 carruselPpalImg"
-              alt="varios electrodomesticos"
-            />
-            <div class="carousel-caption d-none d-md-block titulosKarrusel">
-              <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
-                <h5 class="text-light titulosKarrusel display-4">
-                  <b>De todo para tu hogar</b>
-                </h5>
-                <p class="text-light display-5 mx-auto text-center">
-                  <b></b>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/muchos electrodomesticos.jpg"
-              class="d-block w-100 carruselPpalImg"
-              alt="electrodomesticos varios"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
-                <h5 class="text-light titulosKarrusel display-4">
-                  <b>Línea Inoxidable</b>
-                </h5>
-              </div>
-              <p></p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./img/muchos electrodomesticos4.jpg"
-              class="d-block w-100 carruselPpalImg"
-              alt="teclado de computadora con electrodomesticos"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <div class="titulosKarrusel bg-dark bg-opacity-50 rounded-3">
-                <h5 class="text-light titulosKarrusel display-4">
-                  <b>Comprá Online</b>
-                </h5>
-                <p></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselOfertas"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselOfertas"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
         <div class="container">
           <div class="row">
              <div class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start">
-              <a href="./index.html" class=" link-underline-opacity-0 d-flex align-items-center gap-2"> <img src="./img/EH1.png" alt="icono" class="img-fluid" style="width: 130px; height: 100px;"></a>
+              <a href="../index.html" class=" link-underline-opacity-0 d-flex align-items-center gap-2"> <img src="../img/EH1.png" alt="icono" class="img-fluid" style="width: 130px; height: 100px;"></a>
              </div>
              <div class="col-12 col-md-4 col-lg-3 text-light">
               <ul class="list-unstyled text-center">
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
-                  <a href="./pages/nosotros.html" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Acerca de nosotros</a>
+                  <a href="../pages/nosotros.html" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Acerca de nosotros</a>
                 </li>
                 <li class="mb-1">
                   <a href="#" class=" link-underline-opacity-25 link-underline-opacity-100-hover">Servicio al cliente</a>
