cambio todas las fotos de las grillas, coloco sus titulos y descripcion

--- a/index.html
+++ b/index.html
@@ -130,155 +130,148 @@
       <section class="container my-4">
         <div class="row border row-gap-3">
           <h2 class="text-center">Audio y TV</h2>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card colorFondoGrilla rounded-4">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
                 src="./img/AudioTv/monitor led gadnic 27 pulg.jpg"
-                class="card-img-top"
+                class="card-img-top alturaImgGrilla"
                 alt="televisor 27 pulg"
               />
-              <div class="card-body text-center">
+              <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">
                   Monitor LED Gadnic 27 pulgadas Alta Resolución
                 </p>
-                <a href="#" class="btn colorEstiloGrilla">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto btn-sm"
+                  >Visitar</a
+                >
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
-              <img
-                src="./img/AudioTv/parlante jbl.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
-              />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
                 src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                class="card-img-top alturaImgGrilla"
+                alt="televisor 52 pulg noblex"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Smart TV</b></h3>
+                <p class="card-text">Monitor LED de 52 pulgadas-Noblex</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                src="./img/AudioTv/tv 80 pulgadas.webp"
+                class="card-img-top alturaImgGrilla"
+                alt="televisor pantalla curva"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Smart TV</b></h3>
+                <p class="card-text">Pantalla curva, Samsung 80 pulgadas</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                src="./img/AudioTv/Smart-Tv-32-FullHD-TCL-L32S5400-Frameless-Android-TV-1.webp"
+                class="card-img-top alturaImgGrilla"
+                alt="Televisor con pantalla a
+              colores 32"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Smart TV</b></h3>
+                <p class="card-text">Full TV 32" HD TCL L32S5400</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                src="./img/AudioTv/tv pantalla curva.webp"
+                class="card-img-top alturaImgGrilla"
+                alt="televisor pantalla curva"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Smart TV</b></h3>
+                <p class="card-text">Monitor Curvo 49 pulgadas Samsung</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                src="./img/AudioTv/parlante jbl rojo.jpg"
+                class="card-img-top alturaImgGrilla tamanoImag"
+                alt="parlante jbl rojo"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Parlantes</b></h3>
+                <p class="card-text">Parlante JBL, bluetooth, portatil</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                src="./img/AudioTv/parlante bose.webp"
+                class="card-img-top alturaImgGrilla"
+                alt="parlante bose blanco"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Parlantes</b></h3>
+                <p class="card-text">Parlante Bose Soundlink Flex blanco</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-3">
-            <div class="card">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
               <img
-                src="./img/AudioTv/televisor 52 pulg.webp"
-                class="card-img-top"
-                alt="televisor 52 pulg"
+                src="./img/AudioTv/home teatre2.jpg"
+                class="card-img-top alturaImgGrilla"
+                alt="home teatre"
               />
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card’s content.
-                </p>
-                <a href="#" class="btn btn-primary">Conocelo</a>
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Audio</b></h3>
+                <p class="card-text">Home Theater System Bose 3.1</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
+              <img
+                src="./img/AudioTv/parlante portatil2.webp"
+                class="card-img-top alturaImgGrilla"
+                alt="equipo de hometheater"
+              />
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Parlantes</b></h3>
+                <p class="card-text">Parlante portatil Stromberg 110</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4">
+            <div class="card colorFondoGrilla rounded-4 h-100">
+              <img
+                src="./img/AudioTv/parlantes pc.jpg"
+                class="card-img-top alturaImgGrilla"
+                alt="parlantes para computadora"
+              />
+              <div class="card-body text-center alineaBotonGrilla">
+                <h3 class="card-title"><b>Smart TV</b></h3>
+                <p class="card-text">Parlantes Genius SP-Q USB red</p>
+                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
               </div>
             </div>
           </div>
