corrijo ultima card de la grilla, saco borde al section y cambio tamano de titulo principal

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
       </section>
       <!-- fin carrusel -->
       <!-- Grilla -->
-      <section class="container my-4">
-        <div class="row border row-gap-3">
-          <h2 class="text-center">Audio y TV</h2>
+      <section class="container my-5">
+        <div class="row row-gap-3">
+          <h2 class="text-center display-1"><b>Audio y TV</b></h2>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card colorFondoGrilla rounded-4 h-100">
               <img
@@ -261,7 +261,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-lg-4">
+          <div class="col-12 col-md-6 col-lg-4">
             <div class="card colorFondoGrilla rounded-4 h-100">
               <img
                 src="./img/AudioTv/parlantes pc.jpg"
