--- a/index.html
+++ b/index.html
@@ -386,6 +386,22 @@
       </section>
       <!-- fin grilla -->
       <!-- Heladeras + celulares con publicidades -->
+      <section class="container my-5">
+        <h2 class="display-1 text-center"><b>Heladeras</b></h2>
+        <!-- grilla heladeras -->
+        <article class="padregrilla">
+          <div class="border border-danger hijoimagen p-3">
+            <img
+              src="./img/Heladeras/muchas heladeras.webp"
+              alt="muchos modelos de heladeras"
+              class="img-fluid"
+            />
+          </div>
+          <div class="border border-primary">
+            <p>Encontrá la heladera que soñaste toda tu vida</p>
+          </div>
+        </article>
+      </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
       <div class="container">
