--- a/index.html
+++ b/index.html
@@ -389,16 +389,20 @@
       <section class="container my-5">
         <h2 class="display-1 text-center"><b>Heladeras</b></h2>
         <!-- grilla heladeras -->
-        <article class="padregrilla">
-          <div class="border border-danger hijoimagen p-3">
-            <img
-              src="./img/Heladeras/muchas heladeras.webp"
-              alt="muchos modelos de heladeras"
-              class="img-fluid"
-            />
-          </div>
-          <div class="border border-primary">
-            <p>Encontrá la heladera que soñaste toda tu vida</p>
+        <article class="container">
+          <div class="row">
+            <div class="p-3 col-12 col-md-6">
+              <img
+                src="./img/Heladeras/muchas heladeras.webp"
+                alt="muchos modelos de heladeras"
+                class="img-fluid rounded-5"
+              />
+            </div>
+            <div class="col-12 col-md-6 d-flex align-items-center">
+              <p class="fs-5 text-center">
+                <b>Entrá y encontrá la heladera que siempre soñaste</b>
+              </p>
+            </div>
           </div>
         </article>
       </section>
