coloco el boton en seccion heladeras, le doy estilo

--- a/index.html
+++ b/index.html
@@ -402,6 +402,11 @@
               <b>Entrá y encontrá la heladera que siempre soñaste</b>
             </p>
           </div>
+          <div>
+            <a href="" class="btn botonHela text-light">
+              <b>Buscá la tuya</b>
+            </a>
+          </div>
         </article>
       </section>
     </main>
