--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
                 <p class="card-text">
                   Monitor LED Gadnic 27 pulgadas Alta Resolución
                 </p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto btn-sm"
-                  >Visitar</a
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
                 >
               </div>
             </div>
@@ -265,7 +265,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Monitor LED de 52 pulgadas-Noblex</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -279,7 +281,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Pantalla curva, Samsung 80 pulgadas</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -294,7 +298,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Full TV 32" HD TCL L32S5400</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -308,7 +314,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Monitor Curvo 49 pulgadas Samsung</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -322,7 +330,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante JBL, bluetooth, portatil</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -336,7 +346,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante Bose Soundlink Flex blanco</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -350,7 +362,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Audio</b></h3>
                 <p class="card-text">Home Theater System Bose 3.1</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -364,7 +378,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante portatil Stromberg 110</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
@@ -378,7 +394,9 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Parlantes Genius SP-Q USB red</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto">Visitar</a>
+                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                  ><b>Visitar</b></a
+                >
               </div>
             </div>
           </div>
