creo una grilla vacia para colocar 2 publicidades, hago que una de las div no se vea para dispositivos pequenos

--- a/index.html
+++ b/index.html
@@ -426,6 +426,15 @@
             </a>
           </div>
         </article>
+        <!-- Grilla publicidades -->
+        <article class="container">
+          <div class="row">
+            <div class="border col-12 col-md-6 col-lg-6 d-none d-md-block">
+              asldkja
+            </div>
+            <div class="border col-12 col-md-6 col-lg-6">akdsjl;adfa</div>
+          </div>
+        </article>
       </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
