--- a/index.html
+++ b/index.html
@@ -427,12 +427,26 @@
           </div>
         </article>
         <!-- Grilla publicidades -->
-        <article class="container">
+        <article class="container my-5">
           <div class="row">
             <div class="border col-12 col-md-6 col-lg-6 d-none d-md-block">
-              asldkja
+              <div class="card" style="">
+                <img
+                  src="./img/publicidades/freidora aire.jpg"
+                  class="card-img-top"
+                  alt="black friday freidora de aire"
+                />
+              </div>
             </div>
-            <div class="border col-12 col-md-6 col-lg-6">akdsjl;adfa</div>
+            <div class="border col-12 col-md-6 col-lg-6">
+              <div class="card" style="">
+                <img
+                  src="./img/publicidades/freidora aire.jpg"
+                  class="card-img-top"
+                  alt="black friday freidora de aire"
+                />
+              </div>
+            </div>
           </div>
         </article>
       </section>
