--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <!-- Grilla publicidades -->
         <article class="container my-5">
           <div class="row">
-            <div class="border col-12 col-md-6 col-lg-6 d-none d-md-block">
+            <div class="border col-12 col-md-6 col-lg-6 p-0">
               <div class="card" style="">
                 <img
                   src="./img/publicidades/freidora aire.jpg"
@@ -438,13 +438,21 @@
                 />
               </div>
             </div>
-            <div class="border col-12 col-md-6 col-lg-6">
-              <div class="card" style="">
+            <div class="border col-12 col-md-6 col-lg-6 d-none d-md-block p-0">
+              <div
+                class="card container d-flex justify-content-center align-items-center w-100 h-100 p-0"
+                style=""
+              >
                 <img
-                  src="./img/publicidades/freidora aire.jpg"
-                  class="card-img-top"
-                  alt="black friday freidora de aire"
+                  src="./img/publicidades/tarjetas de credito.webp"
+                  class="card-img-top publiPadre w-100 h-100"
+                  alt="tres tarjetas de credito"
                 />
+                <p
+                  class="publiHijo leyendaTarjeta text-light bg-dark bg-opacity-75 rounded-3 text-center"
+                >
+                  <b>Hasta 6 cuotas sin interés!</b>
+                </p>
               </div>
             </div>
           </div>
