--- a/index.html
+++ b/index.html
@@ -457,6 +457,27 @@
             </div>
           </div>
         </article>
+        <!-- Grilla celulares -->
+        <h2 class="display-1 text-center"><b>Heladeras</b></h2>
+        <article class="container text-center">
+          <div class="p-3">
+            <img
+              src="./img/Heladeras/muchas heladeras.webp"
+              alt="muchos modelos de heladeras"
+              class="img-fluid rounded-5"
+            />
+          </div>
+          <div class="text-center d-none d-md-block">
+            <p class="leyendaHelad">
+              <b>Entrá y encontrá la heladera que siempre soñaste</b>
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn botonHela text-light">
+              <b>Buscá la tuya</b>
+            </a>
+          </div>
+        </article>
       </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
