--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
       <!-- Grilla -->
       <section class="container my-5">
         <div class="row row-gap-3">
-          <h2 class="text-center display-1"><b>Audio y TV</b></h2>
+          <h2 class="display-1">
+            <b><i class="bi bi-chevron-double-right"></i> Audio y TV</b>
+          </h2>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card colorFondoGrilla rounded-4 h-100">
               <img
@@ -405,7 +407,9 @@
       <!-- fin grilla -->
       <!-- Heladeras + celulares con publicidades -->
       <section class="container my-5">
-        <h2 class="display-1 text-center"><b>Heladeras</b></h2>
+        <h2 class="display-1">
+          <b><i class="bi bi-chevron-double-right"></i> Heladeras</b>
+        </h2>
         <!-- grilla heladeras -->
         <article class="container text-center">
           <div class="p-3">
@@ -430,7 +434,7 @@
         <article class="container my-5">
           <div class="row">
             <div class="border col-12 col-md-6 col-lg-6 p-0">
-              <div class="card" style="">
+              <div class="card">
                 <img
                   src="./img/publicidades/freidora aire.jpg"
                   class="card-img-top"
@@ -458,23 +462,25 @@
           </div>
         </article>
         <!-- Grilla celulares -->
-        <h2 class="display-1 text-center"><b>Heladeras</b></h2>
+        <h2 class="display-1">
+          <b><i class="bi bi-chevron-double-right"></i> Celulares</b>
+        </h2>
         <article class="container text-center">
-          <div class="p-3">
+          <div class="py-3">
             <img
-              src="./img/Heladeras/muchas heladeras.webp"
-              alt="muchos modelos de heladeras"
+              src="./img/celulares/muchos celulares2.jpg"
+              alt="muchos celulares"
               class="img-fluid rounded-5"
             />
           </div>
           <div class="text-center d-none d-md-block">
             <p class="leyendaHelad">
-              <b>Entrá y encontrá la heladera que siempre soñaste</b>
+              <b>Todas las marcas, todos los modelos</b>
             </p>
           </div>
           <div>
             <a href="" class="btn botonHela text-light">
-              <b>Buscá la tuya</b>
+              <b>Buscalo!</b>
             </a>
           </div>
         </article>
