--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -136,9 +136,36 @@
       </nav>
     </header>
     <main>
-      <h2 class="display-1">
-        <b><i class="bi bi-chevron-double-right"></i> Heladeras</b>
+      <h2 class="display-1 py-5">
+        <b><i class="bi bi-chevron-double-right"></i> Celulares</b>
       </h2>
+      <!-- Video -->
+      <article class="mt-2 alturaVide">
+        <video width="100%" controls autoplay muted loop class="h-100">
+          <source src="./img/celulares/video.mp4" type="video/mp4" />
+        </video>
+      </article>
+      <!-- grilla -->
+      <section class="container my-4">
+        <div class="row row gap-3 col-12 col-md-4 col-lg-3">
+          <div>
+            <div class="card">
+              <img
+                src="./img/celulares/galaxy z flip5.jpg"
+                class="card-img-top"
+                alt="celular galaxy Z5"
+              />
+              <div class="card-body text-center">
+                <p class="card-text">
+                  <b>Celular Samsung galaxy Z Flip5</b>
+                </p>
+                <p class="card-text">Precio contado: <b>$ 986.800</b></p>
+                <p class="card-text">6 cuotas de $ 193.900</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
