completo fotos de toda la grilla

--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -147,21 +147,89 @@
       </article>
       <!-- grilla -->
       <section class="container my-4">
-        <div class="row row gap-3 col-12 col-md-4 col-lg-3">
-          <div>
-            <div class="card">
-              <img
-                src="./img/celulares/galaxy z flip5.jpg"
-                class="card-img-top"
-                alt="celular galaxy Z5"
-              />
-              <div class="card-body text-center">
-                <p class="card-text">
-                  <b>Celular Samsung galaxy Z Flip5</b>
-                </p>
-                <p class="card-text">Precio contado: <b>$ 986.800</b></p>
-                <p class="card-text">6 cuotas de $ 193.900</p>
-              </div>
+        <div class="row row-gap-3">
+          <div class="card col-12 col-md-4 col-lg-3 colorFondoGrillaCel">
+            <img
+              src="./img/celulares/galaxy z flip5.jpg"
+              class="card-img-top alturaImGrillaCel"
+              alt="celular galaxy Z5"
+            />
+            <div class="card-body text-center">
+              <p class="card-text">
+                <b>Celular Samsung galaxy Z Flip5</b>
+              </p>
+              <p class="card-text">Precio contado: <b>$ 986.800</b></p>
+              <p class="card-text">6 cuotas de $ 193.900</p>
+            </div>
+          </div>
+          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+            <img
+              src="./img/celulares/iphone16.jpg"
+              class="card-img-top alturaImGrillaCel"
+              alt="celular iphone 16"
+            />
+            <div class="card-body text-center">
+              <p class="card-text">
+                <b>Celular Iphone 16</b>
+              </p>
+              <p class="card-text">Precio contado:<b>$ </b></p>
+              <p class="card-text">6 cuotas de $</p>
+            </div>
+          </div>
+          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+            <img
+              src="./img/celulares/motorola e22.jpg"
+              class="card-img-top alturaImGrillaCel"
+              alt="celular motorola E22"
+            />
+            <div class="card-body text-center">
+              <p class="card-text">
+                <b>Celular Motorola E22</b>
+              </p>
+              <p class="card-text">Precio contado:<b>$ </b></p>
+              <p class="card-text">6 cuotas de $</p>
+            </div>
+          </div>
+          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+            <img
+              src="./img/celulares/galaxy fold 6.png"
+              class="card-img-top alturaImGrillaCel"
+              alt="celular galaxy fold 6"
+            />
+            <div class="card-body text-center">
+              <p class="card-text">
+                <b>Celular Samsung galaxy Fold6</b>
+              </p>
+              <p class="card-text">Precio contado: <b>$ </b></p>
+              <p class="card-text">6 cuotas de $</p>
+            </div>
+          </div>
+          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+            <img
+              src="./img/celulares/iphone15.webp"
+              class="card-img-top alturaImGrillaCel"
+              alt="celular iphone 15"
+            />
+            <div class="card-body text-center">
+              <p class="card-text">
+                <b>Celular Iphone 15</b>
+              </p>
+              <p class="card-text">Precio contado: <b>$ </b></p>
+              <p class="card-text">6 cuotas de $</p>
+            </div>
+          </div>
+          <div class="card col-12 col-md-4 col-lg-3 h-100 colorFondoGrillaCel">
+            <img
+              src="./img/celulares/galaxy plegable.jpg"
+              class="card-img-top alturaImGrillaCel"
+              alt="celular galaxy ZFlip3"
+            />
+            <div class="card-body text-center">
+              <p class="card-text">
+                <b>Celular Samsung galaxy Z Flip3</b>
+              </p>
+              <p class="card-text">Precio contado: <b>$</b></p>
+              <p class="card-text">6 cuotas de $</p>
             </div>
           </div>
         </div>
