fix pagina de error

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -146,7 +146,7 @@
                 />
                 <h3 class="mb-3">¡Oops!.... Página no encontrada</h3>
                 <p>Parece que te perdiste... La página que buscas no existe.</p>
-                <a href="../index.html" class="btn btn-primary btn-error mb-3 botonerror" disabled>
+                <a href="../index.html" class="btn btn-primary btn-error mb-3 botonerror">
                   Volver al inicio
                 </a>
               </div>
